syntax = "proto3";

package example;


option go_package = "./api;api";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service HelloService {
  rpc SayHello(HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      post: "/v1/example/hello"
      body: "*"
    };
  }
}
